# app/Http/Controllers/RecipeListController.php
@@ -20,8 +20,19 @@ final class RecipeListController extends Controller
      *             @OA\Property(property="success", type="boolean", example="true"),
      *             @OA\Property(property="type", type="string", example="success"),
      *             @OA\Property(property="data", type="object",
-     *                 @OA\Property(property="code", type="string", example="2302faca-7f66-4078-86d4-abb0ab54b675"),
-     * )
+     *                 @OA\Property(property="name", type="string", example="Ensalada de Pollo y Aguacate"),
+     *                 @OA\Property(property="description", type="string", example="Una deliciosa ensalada con trozos de pollo a la parrilla, aguacate, tomate, y hojas verdes. Aderezada con una vinagreta de limón y miel."),
+     *              @OA\Property(
+     *                  property="data",
+     *                  type="array",
+     *                  @OA\Items(
+     *                      type="object",
+     *                      required={"ingredients"},
+     *                      @OA\Property(property="name", type="string", example="Tomato"),
+     *                      @OA\Property(property="quantity", type="integer", example=3),
+     *                  ),
+     *              ),
+     *          )
      *       )),
      *           ),
      *         )
